--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
     },
     {
       "src": "logo192.png",
-      "type": "image/png",
+      "type": "images/png",
       "sizes": "192x192"
     },
     {
